# goon_sound

./: .gitmodules  CMakeLists.txt  Makefile  main.c
src/sound/: openal.c  openal.h  sound.c  sound.h
